2010-04-21  James Youngman  <jay@gnu.org>

	Unit test release_list::merge and release_list::remove
	* unit-tests/test_rel_list.cc: Add unit tests for
	release_list::merge and release_list::remove.

	Move rl-merge.cc into libcssc.a
	* Makefile.am (libcssc_a_SOURCES): Move rl-merge.cc into the library.
	(get_SOURCES): Remove rl-merge.cc.
	(admin_SOURCES): Likewise.
	* rel_list.h: Remove some unnecessary blank lines.

	Add unit test for rel_list.h
	* unit-tests/test_rel_list.cc: New unit test.
	* unit-tests/Makefile.am (check_PROGRAMS): Add test_rel_list.
	(test_rel_list_SOURCES): Add test_rel_list.cc.

	Add unit test for sid_list.h
	* unit-tests/test_sid_list.cc: New unit test; tests sid_list.h.
	* unit-tests/Makefile.am (check_PROGRAMS): Add test_sid_list.
	(test_sid_list_SOURCES): Add test_sid_list.cc.

2010-04-20  James Youngman  <jay@gnu.org>

	Add unit test for release.h.
	* unit-tests/Makefile.am (check_PROGRAMS): Add test_release.
	(test_release_SOURCES): Add test_release.cc.
	* unit-tests/test_release.cc: New unit test.

	Add unit test for relvbr.
	* unit-tests/Makefile.am (check_PROGRAMS): Add test_relvbr.
	(test_relvbr_SOURCES): Add test_relvbr.cc.
	* unit-tests/test_relvbr.cc: New unit test.

	Add unit test for sid.h.
	* unit-tests/test_sid.cc: New unit test.
	* unit-tests/Makefile.am (test_sid_SOURCES): Add this test.
	(check_PROGRAMS): Likewise.

	* unit-tests/Makefile.am (TESTS): don't duplicate the contents of
	$(check_PROGRAMS), just use that variable.
	(LDADD): Add ../libcssc.a.
	(test_mylist_SOURCES): Don't list object files in libcssc.a.
	(test_myset_SOURCES): Don't list object files in libcssc.a.

	New unit test for myset<T>.
	* unit-tests/Makefile.am (check_PROGRAMS): Add test_myset.
	(LDADD): Just use one LDADD variable for all unit tests.
	* unit-tests/test_myset.cc: New unit test.

	Add a unit test.
	* unit-tests/test_mylist.cc: New file; unit test for mylist<T>.
	* unit-tests/Makefile.am: New file.
	* configure.ac: Call AC_LIBTOOL.  Include